# YDB-django-connector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  Руководство по реализации адаптера YDB для Django.md
ydb_adapter/: base.py  client.py  creation.py  crud.py  features.py  introspection.py  schema_editor.py  settings.py
