[tool.poetry]
name = "ydb-django-connector"
version = "0.1.0"
description = ""
authors = ["SergeAvgust <serge.avgustovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
asgiref = "3.8.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
django = "5.0.6"
frozenlist = "1.4.1"
grpcio = "1.64.1"
idna = "3.7"
multidict = "6.0.5"
packaging = "24.1"
protobuf = "4.25.3"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
yarl = "1.9.4"
ydb = "3.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
